--- a/style/app.scss
+++ b/style/app.scss
@@ -159,3 +159,33 @@
 	width: 0px;
 	background: $primary-color;
 }
+
+
+/* Customizations */
+#csv_onboarding_app_container .customization-columns-wrapper {
+	display: flex;
+	margin-top: 30px;
+}
+
+#csv_onboarding_app_container .customization-columns-wrapper > div {
+	flex: 1;
+}
+
+#csv_onboarding_app_container .column-input {
+	display: flex;
+	flex-direction: column;
+	padding-left: 20px;
+	padding-right: 20px;
+	margin-top: 5px;
+	height: 300px;
+}
+
+#csv_onboarding_app_container .column-input textarea {
+	height: 250px;
+	padding: 0;
+	width: 100%;
+}
+
+#csv_onboarding_app_container .column-input .json-result {
+	text-align: left;
+}
