--- a/views/review.html
+++ b/views/review.html
@@ -52,6 +52,9 @@
 	</div>
 
 	<div class="actions">
+		{{#monsterCheckbox i18n.csvOnboarding.review.hasCustomizations}}
+			<input type="checkbox" class="has-customizations"></input>
+		{{/monsterCheckbox}}
 		<button id="cancel" class="monster-button">{{ i18n.cancel }}</button>
 		<button id="proceed" class="monster-button-success">{{ i18n.csvOnboarding.review.proceed }}</button>
 	</div>
