Features Addition Sprint CSVUP
* FEATURE: Added the ability to create users without devices.

TESTING: Console logs left in for reviewer testing.
-Single User with a device: PASSED
-Single User without a device: PASSED
-Multi-User with devices: PASSED
-Multi-User with devices and only users: PASSED
-Multi-User with devices with missing information: PASSED

* FEATURE: When adding a user with a device or not the user will be added to the company directory automatically.

TESTING: Logs removed
-Single user with a device - PASSED
-Single user without a device - PASSED
-Multiple users with devices - PASSED
-Multiple users with no devices - PASSED
-Multiple users with and without devices - PASSED

* FEATURE: Added the ability to create an optional softphone for a user with a yes or no option and cleaned up some code to work better for adding an optional device.

TESTED:
-Extensively tested all scenarios on/off - PASSED
-Created No device but softphone - PASSED

* FEATURE: Added provisioner device validation. This feature will match the devices in the CSV with the Audian provisioner API call.

TEST:
-Build user with correct brand/family/model - PASSED
-Do not build user with incorrect brand - PASSED
-Do not build user with incorrect family - PASSED
-Do not build user with incorrect model - PASSED

* Feature Added: Ability to add feature keys to new users with devices added to the account.

* FIX: Updated api call that was incorrect.

* FIXES:
-Resolved resetting feature keys back to none issue.
-Resolved duplicate API calls error.

* FIX 1: None and blank as options for device brands will result in no device being made and if no devices are being added skip the feature key part.
TEST 1: Created 2 users with a none and a blank brand cell. -  PASSED
TEST 2: Created 3 users with 1 user that has a valid device and the others have none and a blank brand cell. -  PASSED

FIX 2: Valid devices with no MAC address will make a device as a 

--- a/style/app.scss
+++ b/style/app.scss
@@ -189,3 +189,63 @@
 #csv_onboarding_app_container .column-input .json-result {
 	text-align: left;
 }
+
+/* Feature Keys */
+#csv_onboarding_app_container #add_feature_keys .title {
+	font-size: 20px;
+	margin-bottom: 10px;
+}
+
+#csv_onboarding_app_container #add_feature_keys .control-group .feature-key-index {
+	margin-right: 10px;
+}
+
+#csv_onboarding_app_container #add_feature_keys .control-group {
+	height: 30px;
+	text-align: left;
+	margin-left: 30%;
+}
+
+#csv_onboarding_app_container #add_feature_keys .control-group .feature-key-value {
+	display: inline-block;
+	
+}
+
+#csv_onboarding_app_container #add_feature_keys .control-group .feature-key-value .span1 {
+	margin-left: 7px;
+	width: 150px;
+}
+
+#csv_onboarding_app_container #add_feature_keys .control-group .feature-key-value .span1.parking {
+	width: 50px;
+}
+
+#csv_onboarding_app_container #add_feature_keys .control-group .feature-key-value > label {
+	margin-left: 10px;
+	margin-right: 10px;
+	display: inline-block;
+}
+
+#csv_onboarding_app_container #add_feature_keys .control-group .feature-key-value .sdName {
+	width: 136px;
+}
+
+#csv_onboarding_app_container #add_feature_keys .control-group .feature-key-value .sdNumber {
+	width: 80px;
+}
+
+#csv_onboarding_app_container #add_feature_keys .control-group .chosen-feature-key-user {
+	width: 200px;
+}
+
+#csv_onboarding_app_container #add_feature_keys .control-group .feature-key-number {
+	display: inline-block;
+}
+
+#csv_onboarding_app_container #add_feature_keys .control-group .control-label {
+	width: 160px;
+	height: 20px;
+	display: inline-block;
+	padding-top: 5px;
+	text-align: right;
+}
