--- a/views/upload.html
+++ b/views/upload.html
@@ -1,7 +1,9 @@
 <div id="uploads">
 	<div class="upload-title">
 		<h2>{{ i18n.csvOnboarding.uploads.mainTitle}}</h2>
-		<h5>{{ i18n.csvOnboarding.uploads.subTitle}}</h5>
+		<h5>{{ i18n.csvOnboarding.uploads.subTitle}} 
+			<a href="https://wiki.audian.com/display/SUPD/CSV+Onboarding+App">{{i18n.csvOnboarding.uploads.link}}</a>
+		</h5>
 	</div>
 	<div class="upload-frame">
 		<i class="fa fa-upload"></i>
