--- a/views/results.html
+++ b/views/results.html
@@ -4,7 +4,11 @@
   <p></p>
   <div class="" style="width: 80%; margin: 0 auto;">
     {{#monsterPanelText 'Success!' 'success' 'fill-width'}}
+    {{#if isDevices}}
+      <strong>{{count}}</strong> {{ i18n.csvOnboarding.results.resultText2 }} <strong>{{deviceCount}}</strong> {{ i18n.csvOnboarding.results.resultText3 }} <strong>"{{account}}"</strong>
+    {{else}}
       <strong>{{count}}</strong> {{ i18n.csvOnboarding.results.resultText }} <strong>"{{account}}"</strong>
+    {{/if}}  
     {{/monsterPanelText}}
   </div>
  
