update merge issue

--- a/views/results.html
+++ b/views/results.html
@@ -2,7 +2,7 @@
   <div class="main-title">{{ i18n.csvOnboarding.results.title }}</div>
   <div class="sub-title">{{ i18n.csvOnboarding.results.subTitle }}</div>
   <p></p>
-  <div class="" style="width: 80%; margin: 0 auto;">
+  <div class="box-progress">
     {{#monsterPanelText 'Success!' 'success' 'fill-width'}}
     {{#if isDevices}}
       <strong>{{count}}</strong> {{ i18n.csvOnboarding.results.resultText2 }} <strong>{{deviceCount}}</strong> {{ i18n.csvOnboarding.results.resultText3 }} <strong>"{{account}}"</strong>
