--- a/style/app.scss
+++ b/style/app.scss
@@ -205,3 +205,7 @@
 #csv_onboarding_app_container .column-input .json-result {
 	text-align: left;
 }
+
+#csv_onboarding_app_container .box-progress{
+	width: 80%; margin: 0 auto;
+}
