--- a/views/feature-keys.html
+++ b/views/feature-keys.html
@@ -16,7 +16,7 @@
                     {{/select}}
                 </select>
                 <div class="feature-key-value hidden" data-type="presence">
-                    <label for="provision.keys.feature_keys[{{index}}].value">{{@root.i18n.csvOnboarding.keys.labels.user}}</label>
+                    <label class="type-label" for="provision.keys.feature_keys[{{index}}].value">{{@root.i18n.csvOnboarding.keys.labels.user}}</label>
                     <select class="type" name="provision.keys.feature_keys[{{index}}].value" class="chosen-feature-key-user">
                     {{#each ../data.userList}}
                         <option value="{{id}}">{{first_name}} {{last_name}}</option>
@@ -24,7 +24,7 @@
                     </select>
                 </div>
                 <div class="feature-key-value hidden" data-type="parking">
-                    <label for="provision.keys.feature_keys[{{index}}].value">{{@root.i18n.csvOnboarding.keys.labels.parkingSpot }}</label>
+                    <label class="type-label" for="provision.keys.feature_keys[{{index}}].value">{{@root.i18n.csvOnboarding.keys.labels.parkingSpot }}</label>
                     <select class="type" name="provision.keys.feature_keys[{{index}}].value">
                     {{#each ../data.parkingSpots}}
                         <option value="{{this}}">{{this}}</option>
@@ -32,7 +32,7 @@
                     </select>
                 </div>
                 <div class="feature-key-value hidden" data-type="personal_parking">
-                    <label for="provision.keys.feature_keys[{{index}}].value">{{@root.i18n.csvOnboarding.keys.labels.user}}</label>
+                    <label class="type-label" for="provision.keys.feature_keys[{{index}}].value">{{@root.i18n.csvOnboarding.keys.labels.user}}</label>
                     <select class="type" name="provision.keys.feature_keys[{{index}}].value" class="chosen-feature-key-user">
                     {{#each ../data.userList}}
                         <option value="{{id}}">{{first_name}} {{last_name}}</option>
@@ -40,7 +40,7 @@
                     </select>
                 </div>
                 <div class="feature-key-value hidden" data-type="speed_dial">
-                    <label for="provision.keys.{{../id}}[{{@index}}].name">{{@root.i18n.csvOnboarding.keys.labels.name}}</label>
+                    <label class="type-label" for="provision.keys.{{../id}}[{{@index}}].name">{{@root.i18n.csvOnboarding.keys.labels.name}}</label>
                     <input class="sdName" type="text" name="provision.keys.feature_keys[{{index}}].name">
                     <label for="provision.keys.{{../id}}[{{@index}}].number">{{@root.i18n.csvOnboarding.keys.labels.number}}</label>
                     <input class="sdNumber" type="text" name="provision.keys.feature_keys[{{index}}].number">
@@ -48,7 +48,6 @@
             </div>
         </div>
         {{/each}}
-
 
         <div class="actions">
             <button id="cancel" class="monster-button">{{ i18n.cancel }}</button>
