MSCO-10: Fix issue where workflow doesn't process to next step - First refactor the code

--- a/views/landing.html
+++ b/views/landing.html
@@ -1,7 +1,7 @@
 <div id="landing">
 	<div class="upload-title">
-		<h2>{{ i18n.csvOnboarding.landing.mainTitle}}</h2>
-		<h5>{{{ i18n.csvOnboarding.landing.subTitle }}}
+		<h2>{{ i18n.csvOnboarding.landing.mainTitle }}</h2>
+		<h5>{{{ i18n.csvOnboarding.landing.subTitle }}}</h5>
 	</div>
 	<div class="actions">
 		<button id="users" class="monster-button-secondary">{{ i18n.csvOnboarding.landing.btnAddUser }}</button>
