--- a/views/uploadUsersDevices.html
+++ b/views/uploadUsersDevices.html
@@ -21,14 +21,14 @@
 
 		<div class="text-upload">
 			<div class="first-line">{{ i18n.csvOnboarding.uploads.success.headline}}</div>
-			<div class="second-line">{{ i18n.csvOnboarding.uploads.success.subline}} <span class="file-name"></span><a
-					href="javascript:void(0);" class="undo-upload">{{ i18n.csvOnboarding.uploads.undo }}</a></div>
+			<div class="second-line">{{ i18n.csvOnboarding.uploads.success.subline}} <span class="file-name"></span>
+				<a href="javascript:void(0);" class="undo-upload">{{ i18n.csvOnboarding.uploads.undo }}</a>
+			</div>
 		</div>
 	</div>
 
 	<div class="actions">
 		<button id="back" class="start-job-action monster-button-secondary">{{ i18n.csvOnboarding.uploads.back }}</button>
-		<button disabled id="proceed"
-			class="start-job-action monster-button-primary">{{ i18n.csvOnboarding.uploads.proceed }}</button>
+		<button disabled id="proceed" class="start-job-action monster-button-primary">{{ i18n.csvOnboarding.uploads.proceed }}</button>
 	</div>
 </div>
