MSCO-10: Fix issue where workflow doesn't process to next step (#25)
* MSCO-10: Fix issue where workflow doesn't process to next step - First refactor the code

* Add more code refactoring

* Fix issue where adding Users & Devices throws an error if fields are missing

--- a/views/reviewUsers.html
+++ b/views/reviewUsers.html
@@ -4,7 +4,7 @@
 	<div class="headline">
 		<div>{{ i18n.csvOnboarding.review.headline.first}} <span class="highlight">{{ data.fileName }}</span></div>
 		<div>{{ i18n.csvOnboarding.review.headline.second}} <span class="highlight">{{ data.totalRecords }}</span></div>
-		<div> {{ i18n.csvOnboarding.review.headline.third}} </div>
+		<div>{{ i18n.csvOnboarding.review.headline.third}}</div>
 	</div>
 
 	<div class="review-table-wrapper">
@@ -59,6 +59,6 @@
 			<input type="checkbox" class="has-customizations"></input>
 		{{/monsterCheckbox}}
 		<button id="cancel" class="monster-button">{{ i18n.cancel }}</button>
-		<button id="proceed" class="monster-button-success">{{ i18n.csvOnboarding.review.proceed }}</button>
+		<button id="proceed" class="monster-button-success"{{#compare data.totalRecords "===" 0}} disabled{{/compare}}>{{ i18n.csvOnboarding.review.proceed }}</button>
 	</div>
 </div>
