--- a/views/reviewUsers.html
+++ b/views/reviewUsers.html
@@ -1,10 +1,13 @@
 <div id="review">
-	<div class="app-title">{{ i18n.csvOnboarding.review.title }}</div>
-
 	<div class="headline">
-		<div>{{ i18n.csvOnboarding.review.headline.first}} <span class="highlight">{{ data.fileName }}</span></div>
-		<div>{{ i18n.csvOnboarding.review.headline.second}} <span class="highlight">{{ data.totalRecords }}</span></div>
-		<div>{{ i18n.csvOnboarding.review.headline.third}}</div>
+		<div class="review-row"><span class="text">{{ i18n.csvOnboarding.review.headline.first }}</span><span class="highlight">{{ data.fileName }}</span></div>
+		<div class="review-row"><span class="text">{{ i18n.csvOnboarding.review.headline.second }}</span><span class="highlight">{{ data.totalRecords }}</span></div>
+	</div>
+	<div class="review-row message">
+		<span class="monster-blue info-icon">
+			{{telicon "info--circle"}}
+		</span>
+		{{ replaceVar i18n.csvOnboarding.review.headline.third data.numMatches}}
 	</div>
 
 	<div class="review-table-wrapper">
@@ -20,7 +23,7 @@
 									{{#each @root.data.columns.expected}}
 										<optgroup data-category="{{@key}}" label="{{ tryI18n @root.i18n.csvOnboarding.review.columns @key}}">
 											{{#each this}}
-												<option value="{{this}}"{{#compare this "===" ../../this}} selected{{/compare}}>{{ tryI18n @root.i18n.csvOnboarding.review.columns this}}</option>
+												<option value="{{this}}"{{#compare this "===" ../../this}} selected{{/compare}}>{{ tryI18n @root.i18n.csvOnboarding.review.columns this }}</option>
 											{{/each}}
 										</optgroup>
 									{{/each}}
@@ -59,6 +62,6 @@
 			<input type="checkbox" class="has-customizations"></input>
 		{{/monsterCheckbox}}
 		<button id="cancel" class="monster-button">{{ i18n.cancel }}</button>
-		<button id="proceed" class="monster-button-success"{{#compare data.totalRecords "===" 0}} disabled{{/compare}}>{{ i18n.csvOnboarding.review.proceed }}</button>
+		<button id="proceed" class="monster-button-success disabled">{{ i18n.csvOnboarding.review.proceed }}</button>
 	</div>
 </div>
