--- a/views/customizations.html
+++ b/views/customizations.html
@@ -31,6 +31,6 @@
 	</div>
 
 	<div class="customizations-actions">
-		<button class="continue monster-button-success">{{ i18n.csvOnboarding.customizations.continue }}</button>
+		<button class="continue monster-button-success">{{ i18n.csvOnboarding.review.proceed }}</button>
 	</div>
 </div>
