--- a/style/app.scss
+++ b/style/app.scss
@@ -113,11 +113,57 @@
 /* Review */
 #csv_onboarding_app_container #review .review-table-wrapper {
 	margin-top: 1.5rem;
-	overflow: auto;
+	/* overflow: auto; */
+
+	.dropdown-menu-wrapper {
+		display: none;
+		position: absolute;
+		z-index: 1;
+		background: white;
+		border: 1px solid $french-gray;
+		box-shadow: 0 0 4px #888;
+		min-width: 248px;
+		top: 55px;
+
+		a {
+			color: #151517;
+			display: block;
+			height: 38px;
+			line-height: 38px;
+			padding: 0 12px 0 36px;
+
+			&:hover:not(.category) {
+				background-color: #f4f4f5;
+			}
+
+			span {
+				float: right;
+				display: none;
+			}
+
+			&.category {
+				padding-left: 12px;
+				cursor: default;
+			}
+
+			&.selected {
+				color: #777;
+
+				span {
+					display: block;
+				}
+			}
+		}
+	}
+
+	.dropdown-menu-wrapper.show {
+		display: block;
+	}
 }
 
 #csv_onboarding_app_container #review .review-table-wrapper .column-data {
 	text-transform: none;
+	cursor: pointer;
 }
 
 #csv_onboarding_app_container #review .actions {
@@ -197,6 +243,14 @@
 
 #csv_onboarding_app_container #review .column-selector {
 	width: 150px;
+	background: white;
+	border: 1px solid $french-gray;
+	padding: 5px;
+	margin-bottom: 8px;
+
+	.arrow {
+		float: right;
+	}
 }
 
 /* Progress */
