--- a/views/reviewUsers.html
+++ b/views/reviewUsers.html
@@ -8,6 +8,7 @@
 			<span class="monster-blue info-icon">
 				{{telicon "info--circle"}}
 			</span>
+			<span class="capitalize">{{data.numString }}</span>
 			{{ replaceVar i18n.csvOnboarding.review.message.text data.numMatches}}
 		</div>
 
