--- a/style/app.scss
+++ b/style/app.scss
@@ -331,4 +331,11 @@
 
 #csv_onboarding_app_container .box-progress{
 	width: 80%; margin: 0 auto;
+	margin-top: 10px;
+
+	.title {
+		margin: 1rem 0;
+		font-size: 16px;
+		font-weight: bold;
+	}
 }
