MSCO-22: add option to opt-in to adding users to main directory

--- a/views/reviewUsers.html
+++ b/views/reviewUsers.html
@@ -91,6 +91,9 @@
 	</div>
 
 	<div class="actions">
+		{{#monsterCheckbox i18n.csvOnboarding.review.addToMainDirectory}}
+			<input type="checkbox" class="add-to-main-directory"></input>
+		{{/monsterCheckbox}}
 		{{#monsterCheckbox i18n.csvOnboarding.review.hasCustomizations}}
 			<input type="checkbox" class="has-customizations"></input>
 		{{/monsterCheckbox}}
